src/Syntax/Parser/Parser.cs
using EzrSquared.Runtime.Nodes;
using EzrSquared.Syntax.Errors;
using System;
using System.Collections.Generic;

namespace EzrSquared.Syntax;

/// <summary>
/// The ezr² Parser. The job of the Parser is to convert the input <see cref="Token"/> objects from the <see cref="Lexer"/> into <see cref="Node"/> objects to be given as the input to the <see cref="Runtime.Interpreter"/>.
/// </summary>
public class Parser
{
    /// <summary>
    /// The <see cref="List{T}"/> of <see cref="Token"/> objects to be parsed.
    /// </summary>
    private readonly List<Token> _tokens;

    /// <summary>
    /// The object that holds the result of the parsing.
    /// </summary>
    private readonly ParseResult _result;

    /// <summary>
    /// The index of the <see cref="Token"/> object currently being parsed in the <see cref="_tokens"/> <see cref="List{T}"/>.
    /// </summary>
    private int _index;

    /// <summary>
    /// The <see cref="Token"/> object currently being parsed at <see cref="_index"/> of <see cref="_tokens"/>.
    /// </summary>
    private Token _currentToken;

    // /// <summary>
    // /// The boolean check for if normal syntax or QuickSyntax is being used.
    // /// </summary>
    // private bool _usingQuickSyntax;

    // /// <summary>
    // /// The boolean check for if QuickSyntax was being used previously in parsing.
    // /// </summary>
    // private bool _wasUsingQuickSyntax;

    /// <summary>
    /// Creates a new <see cref="Parser"/> object.
    /// </summary>
    /// <param name="tokens">The <see cref="List{T}"/> of <see cref="Token"/> objects to be parsed.</param>
    public Parser(List<Token> tokens)
    {
        _tokens = tokens;
        // _usingQuickSyntax = false;
        // _wasUsingQuickSyntax = false;
        _result = new ParseResult();

        _index = 0;
        _currentToken = tokens.Count > _index ? _tokens[_index] : Token.Empty;
    }

    /// <summary>
    /// Advances to the next <see cref="Token"/> object in <see cref="_tokens"/>.
    /// </summary>
    private void Advance(int advanceCount = 1)
    {
        _index += advanceCount;
        _result.AdvanceCount += advanceCount;

        if (_tokens.Count > _index)
            _currentToken = _tokens[_index];
    }

    /// <summary>
    /// Reverses back to the <see cref="Token"/> object at <see cref="_index"/> - <paramref name="reverseCount"/> in <see cref="_tokens"/>.
    /// </summary>
    /// <param name="reverseCount">The number of positions to reverse <see cref="_index"/> in <see cref="_tokens"/>.</param>
    private void Reverse(int reverseCount = 1)
    {
        _index -= reverseCount;
        _result.AdvanceCount -= reverseCount;
        _currentToken = _tokens[_index];
    }

    /// <summary>
    /// Peeks at the previous <see cref="Token"/> object from <see cref="_index"/> in <see cref="_tokens"/>.
    /// </summary>
    /// <returns>The <see cref="Token"/> object.</returns>
    private Token PeekPrevious()
    {
        int previousIndex = _index - 1;
        return previousIndex < 0 ? Token.Empty : _tokens[previousIndex];
    }

    /// <summary>
    /// Peeks at the next <see cref="Token"/> object from <see cref="_index"/> in <see cref="_tokens"/>.
    /// </summary>
    /// <param name="advanceCount">The numbers of places to advance in <see cref="_tokens"/>.</param>
    /// <returns>The <see cref="Token"/> object.</returns>
    private Token PeekNext(int advanceCount = 1)
    {
        int nextIndex = _index + advanceCount;
        return _tokens.Count < nextIndex ? Token.Empty : _tokens[nextIndex];
    }

    // /// <summary>
    // /// Registers the use of QuickSyntax.
    // /// </summary>
    // private void RegisterQuickSyntaxUse()
    // {
    //     _wasUsingQuickSyntax = _usingQuickSyntax;
    //     _usingQuickSyntax = true;
    // }

    //  /// <summary>
    //  /// Unregisters the use of QuickSyntax.
    //  /// </summary>
    // private void UnregisterQuickSyntaxUse()
    // {
    //     _usingQuickSyntax = _wasUsingQuickSyntax;
    // }

    /// <summary>
    /// Parses the <see cref="Token"/> objects in <see cref="_tokens"/>.
    /// </summary>
    public ParseResult Parse()
    {
        ParseStatements();
        if (_result.Error is null && _currentToken.Type != TokenType.EndOfFile)
            _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Did not expect this!", _currentToken.StartPosition, _currentToken.EndPosition));
        return _result;
    }

    /// <summary>
    /// Tries creating a <see cref="BinaryOperationNode"/>.
    /// </summary>
    /// <param name="left">The function to call for the first operand.</param>
    /// <param name="right">The function to call for the second operand.</param>
    /// <param name="operators">The operator <see cref="TokenType"/> object(s).</param>
    /// <param name="specialCase">
    /// Any special case that needs to be uniquely handled by the "OnCase" <see cref="Action"/>.
    /// <br/><br/>
    /// "OnCase" is called after the token of type "Type" and any new lines have been parsed, and before <paramref name="right"/> has been called.
    /// <br/>
    /// Note that "Type" must be included in <paramref name="operators"/>.
    /// </param>
    private void BinaryOperation(Action left, Action right, TokenType[] operators, (TokenType Type, Action OnCase)? specialCase = null)
    {
        Position startPosition = _currentToken.StartPosition;

        left();
        if (_result.Error is not null)
            return;
        Node leftNode = _result.Node;

        int toReverseTo = _result.AdvanceCount;
        if (_currentToken.Type == TokenType.NewLine)
            Advance();

        while (Array.Exists(operators, @operator => @operator == _currentToken.Type))
        {
            TokenType @operator = _currentToken.Type;
            Advance();

            if (_currentToken.Type == TokenType.NewLine)
                Advance();

            if (specialCase?.Type == @operator)
            {
                specialCase.Value.OnCase();
                if (_result.Error is not null)
                    return;
            }

            right();
            if (_result.Error is not null)
                return;
            Node rightNode = _result.Node;

            leftNode = new BinaryOperationNode(leftNode, rightNode, @operator, startPosition, rightNode.EndPosition);
            toReverseTo = _result.AdvanceCount;

            if (_currentToken.Type == TokenType.NewLine)
                Advance();
        }

        Reverse(_result.AdvanceCount - toReverseTo);
        _result.Success(leftNode);
    }

    /// <summary>
    /// Tries parsing a 'statements' structure.
    /// </summary>
    private void ParseStatements()
    {
        List<Node> statements = [];
        Position startPosition = _currentToken.StartPosition;

        if (_currentToken.Type == TokenType.NewLine)
            Advance();

        ParseStatement();
        if (_result.Error is not null)
            return;

        statements.Add(_result.Node);
        while (true)
        {
            // NOTE: Qeyword 'l' for 'else if' is deprecated, use Qeyword 'e' instead in format:
            // 'e [check]: [statement(s)]'

            if (_currentToken.Type == TokenType.NewLine)
                Advance();
            else
                break;

            if (_currentToken.Type is TokenType.EndOfFile
                or TokenType.KeywordEnd
                or TokenType.KeywordElse
                or TokenType.KeywordCatch)
                // || (_usingQuickSyntax
                //     && (_currentToken.Type == TokenType.QeywordL
                //     || _currentToken.Type == TokenType.QeywordE
                //     || _currentToken.Type == TokenType.QeywordS)))
                break;

            ParseStatement();
            if (_result.Error is not null)
                return;

            statements.Add(_result.Node);
        }

        _result.Success(new ArrayLikeNode(statements, false, startPosition, statements[^1].EndPosition));
    }

    /// <summary>
    /// Tries parsing a 'statement' structure.
    /// </summary>
    private void ParseStatement()
    {
        Position startPosition = _currentToken.StartPosition;
        if (_currentToken.Type == TokenType.KeywordReturn)
        {
            Position possibleEndPosition = _currentToken.EndPosition;
            Advance();

            if (_currentToken.Type is TokenType.NewLine
                or TokenType.EndOfFile
                or TokenType.KeywordEnd
                or TokenType.KeywordElse
                or TokenType.KeywordCatch)
            // || (_usingQuickSyntax
            //     && (_currentToken.Type == TokenType.QeywordL
            //     || _currentToken.Type == TokenType.QeywordE
            //     || _currentToken.Type == TokenType.QeywordS)))
            {
                _result.Success(new ReturnNode(null, false, startPosition, possibleEndPosition));
                return;
            }

            bool returnLast = false;
            if (_currentToken.Type == TokenType.KeywordLast)
            {
                Advance();
                returnLast = true;
            }

            ParseExpression();
            if (_result.Error is not null)
                return;

            Node expression = _result.Node;
            _result.Success(new ReturnNode(expression, returnLast, startPosition, expression.EndPosition));
            return;
        }
        else if (_currentToken.Type is TokenType.KeywordSkip or TokenType.KeywordStop)
        {
            Position endPosition = _currentToken.EndPosition;
            TokenType currentTokenType = _currentToken.Type;
            Advance();

            _result.Success(new NoValueNode(currentTokenType, startPosition, endPosition));
            return;
        }

        ParseExpression();
        if (_result.Error is not null)
            _result.Failure(4, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a statement!", _currentToken.StartPosition, _currentToken.EndPosition));
    }

    /// <summary>
    /// Tries parsing an 'expression' structure.
    /// </summary>
    /// <param name="itemKeywordRequired">In cases where the variable assignment expression requires the 'item' keyword, set this to <see langword="true"/>.</param>
    private void ParseExpression(bool itemKeywordRequired = false)
    {
        Position startPosition = _currentToken.StartPosition;

        AccessMod accessibilityModifiers = AccessMod.None;
        bool usedItemKeyword = false;
        int startingAdvanceCount = _result.AdvanceCount;

        if (_currentToken.Type == TokenType.KeywordGlobal)
        {
            accessibilityModifiers |= AccessMod.Global;
            Advance();
        }

        if (_currentToken.Type == TokenType.KeywordPrivate)
        {
            if ((accessibilityModifiers & AccessMod.Global) == AccessMod.Global)
            {
                _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "A variable, function or class cannot be declared 'global' and 'private' at the same time! It must be either 'global' , which means it is accessible to any code, or 'private' , which means it is only accessible to the current context.", startPosition, _currentToken.EndPosition));
                return;
            }

            accessibilityModifiers |= AccessMod.Private;
            Advance();
        }

        if (_currentToken.Type == TokenType.KeywordStatic)
        {
            accessibilityModifiers |= AccessMod.Static;
            Advance();
        }

        if (_currentToken.Type == TokenType.KeywordConstant)
        {
            accessibilityModifiers |= AccessMod.Constant;
            Advance();
        }

        if (_currentToken.Type == TokenType.KeywordItem)
        {
            usedItemKeyword = true;
            Advance();
        }
        else if (itemKeywordRequired)
        {
            ParseQuickExpression(true);
            if (_result.Error is not null)
                _result.Failure(4, new SyntaxError(SyntaxError.InvalidGrammar, "Expected an expression!", _currentToken.StartPosition, _currentToken.EndPosition));
            return;
        }

        if (_currentToken.Type == TokenType.Identifier || _currentToken.TypeGroup == TokenTypeGroup.Qeyword || _currentToken.Type == TokenType.LeftParenthesis)
        {
            ParseJunction();
            if (_result.Error is not null)
                return;

            Node variable = _result.Node;
            if (_currentToken.TypeGroup == TokenTypeGroup.AssignmentSymbol)
            {
                TokenType assignmentOperator = _currentToken.Type;
                Advance();

                ParseExpression();
                if (_result.Error is not null)
                    return;

                Node value = _result.Node;
                _result.Success(new VariableAssignmentNode(variable, assignmentOperator, value, accessibilityModifiers, startPosition, value.EndPosition));
                return;
            }
            else if (usedItemKeyword || ((accessibilityModifiers & AccessMod.PrivateConstant) != 0))
            {
                _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Expected an assignment symbol! The assignment symbol seperates the variable name and value, and declares how to handle any existing values in the variable, in a variable assignment expression. A few examples of assignment symbols are: (':') - normal assignment, (':+') - adds existing value in variable to new value, assigns the result, (':*') - multiplies existing value with new value, assigns the result, and (':&') - does a bitwise and operation between the existing and new value, assigns the result. There are equivalent symbols for all binary mathematical and bitwise operations.", _currentToken.StartPosition, _currentToken.EndPosition));
                return;
            }
            else
                Reverse(_result.AdvanceCount - startingAdvanceCount);
        }
        else if (usedItemKeyword)
        {
            _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a variable name! The variable name is where the value will be assigned.", _currentToken.StartPosition, _currentToken.EndPosition));
            return;
        }
        else
            Reverse(_result.AdvanceCount - startingAdvanceCount);

        ParseQuickExpression();
        if (_result.Error is not null)
            _result.Failure(4, new SyntaxError(SyntaxError.InvalidGrammar, "Expected an expression!", _currentToken.StartPosition, _currentToken.EndPosition));
    }

    /// <summary>
    /// Tries parsing a 'quick-expression' structure.
    /// </summary>
    private void ParseQuickExpression(bool itemKeywordRequired = false)
    {
        Position startPosition = _currentToken.StartPosition;
        int startingAdvanceCount = _result.AdvanceCount;

        if (_currentToken.Type == TokenType.ExclamationMark)
        {
            Advance();

            AccessMod accessibilityModifiers = AccessMod.None;
            bool usedItemKeyword = false;
            if (_currentToken.Type == TokenType.QeywordG)
            {
                accessibilityModifiers |= AccessMod.Global;
                Advance();
            }

            if (_currentToken.Type == TokenType.QeywordP)
            {
                if ((accessibilityModifiers & AccessMod.Global) == AccessMod.Global)
                {
                    Position errorStartPosition = startPosition.Copy();
                    errorStartPosition.Advance();

                    _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "A variable, function or class cannot be declared 'global' and 'private' at the same time! It must be either 'global' , which means it is accessible to any code, or 'private' , which means it is only accessible to the current context.", errorStartPosition, _currentToken.EndPosition));
                    return;
                }

                accessibilityModifiers |= AccessMod.Private;
                Advance();
            }

            if (_currentToken.Type == TokenType.QeywordSb)
            {
                accessibilityModifiers |= AccessMod.Static;
                Advance();
            }

            if (_currentToken.Type == TokenType.QeywordC)
            {
                accessibilityModifiers |= AccessMod.Constant;
                Advance();
            }

            if (_currentToken.Type == TokenType.QeywordD)
            {
                usedItemKeyword = true;
                Advance();
            }
            else if (itemKeywordRequired)
            {
                ParseJunction();
                if (_result.Error is not null)
                    _result.Failure(4, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a QuickSyntax expression!", _currentToken.StartPosition, _currentToken.EndPosition));
                return;
            }

            if (_currentToken.Type == TokenType.Identifier || _currentToken.TypeGroup == TokenTypeGroup.Qeyword || _currentToken.Type == TokenType.LeftParenthesis)
            {
                ParseJunction();
                if (_result.Error is not null)
                    return;

                Node variable = _result.Node;
                if (_currentToken.TypeGroup == TokenTypeGroup.AssignmentSymbol)
                {
                    TokenType assignmentOperator = _currentToken.Type;
                    Advance();

                    ParseExpression();
                    if (_result.Error is not null)
                        return;

                    Node value = _result.Node;
                    _result.Success(new VariableAssignmentNode(variable, assignmentOperator, value, accessibilityModifiers, startPosition, value.EndPosition));
                    return;
                }
                else if (usedItemKeyword || ((accessibilityModifiers & AccessMod.PrivateConstant) != 0))
                {
                    _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Expected an assignment symbol! The assignment symbol seperates the variable name and value, and declares how to handle any existing values in the variable, in a variable assignment expression. A few examples of assignment symbols are: (':') - normal assignment, (':+') - adds existing value in variable to new value, assigns the result, (':*') - multiplies existing value with new value, assigns the result, and (':&') - does a bitwise and operation between the existing and new value, assigns the result. There are equivalent symbols for all binary mathematical and bitwise operations.", _currentToken.StartPosition, _currentToken.EndPosition));
                    return;
                }
                else
                    Reverse(_result.AdvanceCount - startingAdvanceCount);
            }
            else if (usedItemKeyword)
            {
                _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a variable name! The variable name is where the value will be assigned.", _currentToken.StartPosition, _currentToken.EndPosition));
                return;
            }
            else
                Reverse(_result.AdvanceCount - startingAdvanceCount);
        }

        ParseJunction();
        if (_result.Error is not null)
            _result.Failure(4, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a QuickSyntax expression!", _currentToken.StartPosition, _currentToken.EndPosition));
    }

    /// <summary>
    /// Tries parsing a 'junction' structure.
    /// </summary>
    private void ParseJunction()
    {
        BinaryOperation(ParseInversion, ParseInversion, [TokenType.KeywordAnd, TokenType.KeywordOr]);
    }

    /// <summary>
    /// Tries parsing an 'inversion' structure.
    /// </summary>
    private void ParseInversion()
    {
        Position startPosition = _currentToken.StartPosition;
        int startingAdvanceCount = _result.AdvanceCount;

        if (_currentToken.Type is TokenType.KeywordInvert or TokenType.KeywordNot)
        {
            TokenType @operator = _currentToken.Type;
            Advance();

            ParseInversion();
            if (_result.Error is not null)
                return;

            Node operand = _result.Node;
            _result.Success(new UnaryOperationNode(operand, @operator, startPosition, operand.EndPosition));
            return;
        }
        else if (_currentToken.Type == TokenType.ExclamationMark)
        {
            Advance();

            if (_currentToken.Type == TokenType.QeywordV)
            {
                TokenType @operator = _currentToken.Type;
                Advance();

                ParseInversion();
                if (_result.Error is not null)
                    return;

                Node operand = _result.Node;
                _result.Success(new UnaryOperationNode(operand, @operator, startPosition, operand.EndPosition));
                return;
            }
            else
                Reverse(_result.AdvanceCount - startingAdvanceCount);
        }

        ParseContainsCheck();
        if (_result.Error is not null)
            _result.Failure(4, new SyntaxError(SyntaxError.InvalidGrammar, "Expected an inversion expression!", _currentToken.StartPosition, _currentToken.EndPosition));
    }

    /// <summary>
    /// Tries parsing a 'contains-check' structure.
    /// </summary>
    private void ParseContainsCheck()
    {
        BinaryOperation(ParseComparison, ParseComparison,
            [
                TokenType.KeywordIn,
                TokenType.KeywordNot,
            ],
            (TokenType.KeywordNot, () =>
            {
                if (_currentToken.Type != TokenType.KeywordIn)
                {
                    _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Expected the 'in' keyword! The 'in' keyword is the second part of a check-not-in operation.", _currentToken.StartPosition, _currentToken.EndPosition));
                    return;
                }

                Advance();
                if (_currentToken.Type == TokenType.NewLine)
                    Advance();
            }
        ));
    }

    /// <summary>
    /// Tries parsing a 'comparison' structure.
    /// </summary>
    private void ParseComparison()
    {
        BinaryOperation(ParseBitwiseOr, ParseBitwiseOr,
            [
                TokenType.EqualSign,
                TokenType.ExclamationMark,
                TokenType.LessThanSign,
                TokenType.GreaterThanSign,
                TokenType.LessThanOrEqual,
                TokenType.GreaterThanOrEqual,
            ]);
    }

    /// <summary>
    /// Tries parsing a 'bitwise-or' structure.
    /// </summary>
    private void ParseBitwiseOr()
    {
        BinaryOperation(ParseBitwiseXOr, ParseBitwiseXOr, [TokenType.VerticalBar]);
    }

    /// <summary>
    /// Tries parsing a 'bitwise-xor' structure.
    /// </summary>
    private void ParseBitwiseXOr()
    {
        BinaryOperation(ParseBitwiseAnd, ParseBitwiseAnd, [TokenType.Backslash]);
    }

    /// <summary>
    /// Tries parsing a 'bitwise-and' structure.
    /// </summary>
    private void ParseBitwiseAnd()
    {
        BinaryOperation(ParseBitwiseShift, ParseBitwiseShift, [TokenType.Ampersand]);
    }

    /// <summary>
    /// Tries creating a 'bitwise-shift' structure.
    /// </summary>
    private void ParseBitwiseShift()
    {
        BinaryOperation(ParseArithmeticExpression, ParseArithmeticExpression, [TokenType.BitwiseLeftShift, TokenType.BitwiseRightShift]);
    }

    /// <summary>
    /// Tries parsing an 'arithmetic-expression' structure.
    /// </summary>
    private void ParseArithmeticExpression()
    {
        BinaryOperation(ParseTerm, ParseTerm, [TokenType.Plus, TokenType.HyphenMinus]);
    }

    /// <summary>
    /// Tries parsing a 'term' structure.
    /// </summary>
    private void ParseTerm()
    {
        BinaryOperation(ParseFactor, ParseFactor, [TokenType.Asterisk, TokenType.Slash, TokenType.PercentSign]);
    }

    /// <summary>
    /// Tries parsing a 'factor' structure.
    /// </summary>
    private void ParseFactor()
    {
        Position startPosition = _currentToken.StartPosition;

        TokenType @operator = _currentToken.Type;
        if (@operator is TokenType.Plus or TokenType.HyphenMinus or TokenType.Tilde)
        {
            Advance();

            ParseFactor();
            if (_result.Error is not null)
                return;

            Node operand = _result.Node;
            _result.Success(new UnaryOperationNode(operand, @operator, startPosition, operand.EndPosition));
            return;
        }

        ParsePower();
    }

    /// <summary>
    /// Tries parsing a 'power' structure.
    /// </summary>
    private void ParsePower()
    {
        BinaryOperation(ParseObjectAttributeAccess, ParseObjectAttributeAccess, [TokenType.Caret]);
    }

    /// <summary>
    /// Tries parsing an 'object-attribute-access' structure.
    /// </summary>
    private void ParseObjectAttributeAccess()
    {
        BinaryOperation(ParseCall, ParseCall, [TokenType.Period]);
    }

    /// <summary>
    /// Tries parsing a 'call' structure.
    /// </summary>
    private void ParseCall()
    {
        Position startPosition = _currentToken.StartPosition;

        ParseAtom();
        if (_result.Error is not null)
            return;

        if (_currentToken.Type != TokenType.LeftParenthesis)
            return;

        Node node = _result.Node;
        Advance();

        Token possibleErrorToken = _currentToken;
        if (_currentToken.Type == TokenType.NewLine)
            Advance();

        Position endPosition;
        List<Node> arguments = [];
        if (_currentToken.Type == TokenType.RightParenthesis)
        {
            endPosition = _currentToken.EndPosition;
            Advance();
        }
        else
        {
            ParseExpression();
            if (_result.Error is not null)
            {
                _result.Failure(10, new StackedSyntaxError(_result.Error, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a right-parenthesis symbol! The function/object call expression must end with a right-parenthesis.", possibleErrorToken.StartPosition, possibleErrorToken.EndPosition)));
                return;
            }

            arguments.Add(_result.Node);
            if (_currentToken.Type == TokenType.NewLine)
                Advance();

            while (_currentToken.Type == TokenType.Comma)
            {
                possibleErrorToken = _currentToken;
                Advance();

                if (_currentToken.Type == TokenType.NewLine)
                    Advance();

                ParseExpression();
                if (_result.Error is not null)
                {
                    _result.Failure(10, new StackedSyntaxError(_result.Error, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a right-parenthesis symbol! The function/object call expression must end with a right-parenthesis.", possibleErrorToken.StartPosition, possibleErrorToken.EndPosition)));
                    return;
                }
                arguments.Add(_result.Node);

                if (_currentToken.Type == TokenType.NewLine)
                    Advance();
            }

            if (_currentToken.Type != TokenType.RightParenthesis)
            {
                _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, "Expected a comma or right-parenthesis symbol! Commas are used to seperate the arguments of the function/object call expression, and the right-parenthesis is used to end it.", _currentToken.StartPosition, _currentToken.EndPosition));
                return;
            }

            endPosition = _currentToken.EndPosition;
            Advance();
        }

        _result.Success(new CallNode(node, arguments, startPosition, endPosition));
    }

    /// <summary>
    /// Tries parsing a 'atom' structure.
    /// </summary>
    private void ParseAtom()
    {
        Token startToken = _currentToken;
        switch (startToken.Type)
        {
            case TokenType.KeywordGlobal:
                Token nextToken = PeekNext();
                int peek = 1;

                AccessMod accessibilityModifiers = AccessMod.Global;
                bool readOnly = false;

                if (nextToken.Type == TokenType.KeywordStatic)
                {
                    nextToken = PeekNext(++peek);
                    accessibilityModifiers |= AccessMod.Static;
                }

                if (nextToken.Type == TokenType.Identifier || nextToken.TypeGroup == TokenTypeGroup.Qeyword)
                {
                    Advance(accessibilityModifiers == AccessMod.GlobalStatic ? 2 : 1);

                    Token variable = _currentToken;
                    Position endPosition = _currentToken.EndPosition;
                    Advance();

                    _result.Success(new VariableAccessNode(variable, accessibilityModifiers, startToken.StartPosition, endPosition));
                    return;
                }

                if (nextToken.Type == TokenType.KeywordConstant)
                {
                    nextToken = PeekNext(++peek);
                    accessibilityModifiers |= AccessMod.Constant;
                }

                if (nextToken.Type == TokenType.KeywordReadonly)
                {
                    nextToken = PeekNext(++peek);
                    readOnly = true;
                }

                if (!readOnly && nextToken.Type == TokenType.KeywordFunction)
                {
                    ParseFunctionDefinitionExpression();
                    return;
                }
                else if (nextToken.Type == TokenType.KeywordObject)
                {
                    ParseClassDefinitionExpression();
                    return;
                }

                bool isConstant = (accessibilityModifiers & AccessMod.Constant) == AccessMod.Constant;
                string onConstant = isConstant ? "constant " : string.Empty;
                string onVariable = isConstant ? string.Empty : "variable ";

                string onStatic = (accessibilityModifiers & AccessMod.Static) == AccessMod.Static ? "static " : string.Empty;

                string errorMessage = (readOnly, isConstant) switch
                {
                    (true, _) => $"Expected the 'object' keyword! In this case, the 'object' keyword is used to declare a global {onStatic}{onConstant}read-only class.",
                    (false, true) => $"Expected a variable assignment expression or the 'function' or 'object' keywords! In this case, a variable assignment expression will assign a global {onStatic}{onConstant}{onVariable}and the 'function' or 'object' keywords will declare a global {onStatic}{onConstant}function or class, respectively.",
                    (false, false) => $"Expected a variable assignment expression, variable access expression or the 'function' or 'object' keywords! In this case, a variable assignment expression will assign a global {onStatic}variable, a variable access expression references a global {onStatic}variable and the 'function' or 'object' keywords will declare a global {onStatic}function or class, respectively.",
                };

                _result.Failure(10, new SyntaxError(SyntaxError.InvalidGrammar, errorMessage, nextToken.StartPosition, nextToken.EndPosition));
                break;
            case TokenType.KeywordPrivate:
                nextToken = PeekNext();
                peek = 1;

                accessibilityModifiers = AccessMod.Private;
                readOnly = false;

                if (nextToken.Type == TokenType.KeywordStatic)
                {
                    nextToken = PeekNext(++peek);
                    accessibilityModifiers |= AccessMod.Static;
                }

                if (nextToken.Type == TokenType.KeywordConstant)
                {
                    nextToken = PeekNext(++peek);
                    accessibilityModifiers |= AccessMod.Constant;
                }

                if (nextToken.Type == TokenType.KeywordReadonly)
                {
                    nextToken = PeekNext(++peek);
                    readOnly = true;
                }

                if (!readOnly && nextToken.Type == TokenType.KeywordFunction)
                {
                    ParseFunctionDefinitionExpression();
                    return;
                }
                else if (nextToken.Type == TokenType.KeywordObject)
                {
                    ParseClassDefinitionExpression();
                    return;
                }
